---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: ???
  Changes:
    - Now also hides from the toolbar selection, logistic requests, technology effects, and circuitry signal selection.

  Bugfixes:
    - Fixed all cliffs were always hidden.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024-10-14
  Features:
    - Initial release