@@ -5,8 +5,12 @@ hide-space-age-spoilers=Hide Space Age spoilers
 hide-space-age-spoilers=Hides menu backgrounds and Factoriopedia pages related to planets you haven't visited yet. You can reveal content again in the mod settings as you progress through the game, planet-by-planet.
 
 [mod-setting-name]
+hsas-only-factoriopedia=Only hide in Factoriopedia
 hsas-reveal=__1__ Reveal __2__ content
 hsas-endgame=Endgame
+
+[mod-setting-description]
+hsas-only-factoriopedia=When checked, content will only be hidden in Factoriopedia.\nWhen unchecked, content will be hidden everywhere, including: Toolbar selection, logistic requests, technology effects, and circuitry signal selection.
 
 [hide-space-age-spoilers]
 mod-settings-reminder=[font=default-large-bold]Hide Space Age spoilers:[/font] Congratulations on reaching __1__!\nRemember that you can un-hide spoilers for a location by changing this mod's settings from the main menu.
